--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
             <li><a class="footer-link" href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
           </ul>
 
-        <p class="copyright">Copyright &copy; 2022 by Omnifood, Inc. All rights reserved</p>
+        <p class="copyright">Copyright &copy; <span class="year">2022</span> by Omnifood, Inc. All rights reserved</p>
       </div>
       <div class="address-col">
         <p class="footer-heading">Contact Us</p>
@@ -533,6 +533,7 @@
     
   </footer>
 
+  <script defer src="js/script.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
